@@ -2,9 +2,10 @@ package io.seventytwo.oss.maven.gettext;
 
 import org.apache.maven.plugin.AbstractMojo;
 import org.apache.maven.plugin.MojoExecutionException;
+import org.apache.maven.plugins.annotations.LifecyclePhase;
+import org.apache.maven.plugins.annotations.Mojo;
 import org.apache.maven.plugins.annotations.Parameter;
 import org.apache.maven.project.MavenProject;
-import org.apache.maven.reporting.MavenReportException;
 import org.codehaus.plexus.util.DirectoryScanner;
 import org.codehaus.plexus.util.cli.CommandLineException;
 import org.codehaus.plexus.util.cli.CommandLineUtils;
@@ -18,12 +19,10 @@ import java.util.regex.Pattern;
 
 /**
  * Goal that generates a report.
- *
- * @author Steffen Pingel
- * @goal report
- * @phase process-sources
  */
+@Mojo(name = "report", defaultPhase = LifecyclePhase.PROCESS_SOURCES)
 public class ReportMojo extends AbstractMojo {
+
     private static final Pattern TRANSLATOR_PATTERN = Pattern.compile("\"Last-Translator: (?<name>.*)\"", Pattern.CASE_INSENSITIVE | Pattern.UNICODE_CASE);
 
     /**
@@ -182,9 +181,9 @@ public class ReportMojo extends AbstractMojo {
         String basename = file.getName().substring(0, file.getName().lastIndexOf('.'));
         if (basename.contains("_")) {
             StringTokenizer t = new StringTokenizer(basename, "_");
-            return Locale.of(t.nextToken(), t.nextToken());
+            return new Locale(t.nextToken(), t.nextToken());
         } else {
-            return Locale.of(basename);
+            return new Locale(basename);
         }
     }
 
